<resources>
    <string name="app_name">Subjects</string>
    <string name="view_live_video_feed">View/Live Video Feed</string>
    <string name="view_adjust_temperature">View/Adjust Temperature</string>
    <string name="system_notifications">System Notifications</string>
    <string name="play_melodys_voice">Play Melodys/Voice</string>
    <string name="system_settings">System-Settings</string>
    <string name="user_profile">User-Profile</string>

    <string name="fan_on_off">Fan On/Off</string>
    <string name="current_temp_22c">Current Temp: 22c</string>
    <string name="warmer">Warmer</string>
    <string name="colder">Colder</string>
    <string name="baby_monitoring_system">Baby Monitoring System</string>
    <string name="todo2">TODO2</string>
    <string name="set_name">Set Name</string>
    <string name="please_enter_baby_s_name">Please enter baby\'s name!</string>
    <string name="enter_a_name">Enter a name!</string>
    <string name="please_enter_a_name_for_baby">Please Enter a Name For Baby</string>
    <string name="the_baby_s_name_has_been_set_to">The Baby\'s name has been set to</string>
    <string name="system_dashboard">System Dashboard</string>
    <string name="please_select_name_and_optimal_temperature_below">Please select name and optimal temperature below!</string>
    <string name="humidity">Humidity</string>
    <string name="data_from_all_sensors">Data from all sensors</string>
    <string name="this_is_the_section_where_there_will_be_multiple_graphs_displaying_all_the_data_gathered_from_the_various_sensors">This is the section where there will be multiple graphs displaying all the data gathered from the various sensors</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="set_temperature">Set Temperature</string>
    <string name="heating_up">Heating Up</string>
    <string name="heating_down">Heating Down</string>
    <string name="heating_on_off">Heating On/Off</string>
    <string name="current_temp_info">Current Temp Info</string>
    <string name="clear_messages">Clear Messages</string>


</resources>
