<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/newbackground"
    android:weightSum="8"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/newbackground"
        android:weightSum="12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:paddingTop="5dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <GridLayout
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!-- Row 1-->
        <!-- Col 1-->
     <android.support.v7.widget.CardView
         app:cardBackgroundColor="#F88012"
         android:layout_width="1dp"
         android:layout_height="0dp"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         app:cardCornerRadius="14dp"
         app:cardElevation="14dp"
         android:layout_marginBottom="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="15dp">



         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
             android:orientation="vertical"
             android:layout_margin="16dp">

             <ImageView
                  android:id="@+id/aiImage"
                  android:onClick="onClick"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:src="@drawable/video"
                 android:contentDescription="@string/todo" />

             <TextView
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/view_live_video_feed"
                 android:textAlignment="center"
                 android:textColor="#fdf8f8"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />




         </LinearLayout>


     </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            app:cardElevation="14dp"
            app:cardCornerRadius="14dp"
            app:cardBackgroundColor="#F88012"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_margin="16dp">

                 <ImageView
                      android:onClick="tempOnClick"
                      android:src="@drawable/temp"
                      android:layout_gravity="center_horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                     android:contentDescription="@string/todo" />

                <TextView
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_adjust_temperature"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Col 1-->
        <android.support.v7.widget.CardView
            app:cardBackgroundColor="#F88012"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            app:cardElevation="14dp"
            app:cardCornerRadius="14dp"


            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:onClick="messOnClick"
                    android:src="@drawable/messages"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/system_notifications"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Col 1-->
        <android.support.v7.widget.CardView
            app:cardBackgroundColor="#F88012"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            app:cardElevation="14dp"
            app:cardCornerRadius="14dp"
            android:paddingEnd="10dp"


            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_margin="16dp">

                 <ImageView
                     android:onClick="musicOnClick"
                     android:src="@drawable/music"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/todo" />

                <TextView
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/play_melodys_voice"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="#F88012"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            app:cardElevation="14dp"
            app:cardCornerRadius="14dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:onClick="dashOnClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dash"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:text="@string/system_dashboard"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />




            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="#F88012"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            app:cardElevation="14dp"
            app:cardCornerRadius="14dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <ImageView
                    android:onClick="userOnClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profile"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:text="@string/user_profile"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />




            </LinearLayout>


        </android.support.v7.widget.CardView>








    </GridLayout>




    </LinearLayout>


</ScrollView>

